--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,7 @@
     mat-icon-button
     class="example-icon"
     aria-label="Example icon-button with menu icon"
-  >
-    <!-- <mat-icon>menu</mat-icon> -->
-  </button>
+  ></button>
   <span>CRUD Operations - Angular</span>
   <span class="example-spacer"></span>
   <button mat-raised-button (click)="openDialog()">Add Product</button>
@@ -65,6 +63,22 @@
         <ng-container matColumnDef="action">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
           <td mat-cell *matCellDef="let row">
+            <a
+              mat-icon-button
+              color="warn"
+              [routerLink]="['/product', row.id]"
+              [title]="row.productName + ' details'"
+            >
+              <mat-icon>remove_red_eye </mat-icon>
+            </a>
+            <!-- <button
+              mat-icon-button
+              color=""
+              [title]="row.productName + ' details - btn'"
+              (click)="viewProduct(row.id)"
+            >
+              <mat-icon>remove_red_eye </mat-icon>
+            </button> -->
             <button mat-icon-button color="primary" (click)="editProduct(row)">
               <mat-icon>edit</mat-icon>
             </button>
@@ -96,3 +110,5 @@
     </div>
   </div>
 </div>
+
+<router-outlet></router-outlet>
